force-app/main/default/objects/ffr__InquiryTemplateRCP__c/ffr__InquiryTemplateRCP__c.object-meta.xml
<CustomObject>
    <description>Stores the list of related content panes that can be made available on an action view template.</description>
    <label>Action View Template RCP</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Action View Template RCPs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>