force-app/main/default/objects/ffr__InquiryTemplateRCP__c/fields/ffr__DataviewField__c.field-meta.xml
<CustomField>
    <fullName>ffr__DataviewField__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Dataview Field</label>
    <referenceTo>ffr__DataViewField__c</referenceTo>
    <relationshipLabel>Action View Template RCPs</relationshipLabel>
    <relationshipName>InquiryTemplateRCPs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>