force-app/main/default/objects/ffr__InquiryTemplateRCP__c/fields/ffr__IsDefault__c.field-meta.xml
<CustomField>
    <fullName>ffr__IsDefault__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Default</label>
    <type>Checkbox</type>
</CustomField>