force-app/main/default/objects/ffr__InquiryTemplateRCP__c/fields/ffr__RelatedContentPane__c.field-meta.xml
<CustomField>
    <fullName>ffr__RelatedContentPane__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Related Content Pane</label>
    <referenceTo>ffr__RelatedContentPane__c</referenceTo>
    <relationshipLabel>Action View Template RCPs</relationshipLabel>
    <relationshipName>InquiryTemplateRCPs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>